examples/c/error-codes/violates-constraint/fatal/CV-FD3-bad-static.c
void foo(x) 
struct foo x;
{}

int main() {}
